Trying to fix z-index

--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -6,6 +6,10 @@
   top: 3em;
 }
 
+.App {
+    z-index: -10;
+}
+
 .container {
     z-index: 100;
 }
